--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,49 @@
-html {
+/* html {
   box-sizing: border-box;
-}
+} */
 
-*,
+/* *,
 *::before,
 *::after {
-}
+} */
 
-:root {
-  /* Fonts */
+/* utils */
 
-  /* Text colors */
+/* :root {
+
+
   --subtitle-col: #212121;
   --txt-col: #757575;
   --txt-but: #ffffff;
 
-  /* Background colors */
+  
   --main-cl: #f5f5f5;
   --backgr-filtr: #f5f4fa;
   --backgr-col: #2f303a;
   --icon-cl: #afb1b8;
 
-  /* Other */
+  
   --accent-cl: #2196f3;
   --timing-funcion: cubic-bezier(0.4, 0, 0.2, 1);
-}
+} 
 
-body {
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+*/
+
+/* base styles */
+
+/* body {
   font-family: "Roboto", sans-serif;
   color: var(--main-cl);
   margin: 0;
@@ -42,9 +59,11 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
-}
+} */
 
-h1,
+/* reset */
+
+/* h1,
 h2,
 h3,
 h4,
@@ -52,34 +71,26 @@ h5,
 h6,
 p {
   margin: 0;
-}
+} */
 
-.hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.container {
+/* .container {
   max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
-.header {
+/* .section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+} */
+
+/* .header {
   border-bottom: 1px solid #ececec;
-}
+} */
 
-.nav {
+/* .nav {
   display: flex;
   align-items: center;
 }
@@ -87,14 +98,14 @@ p {
 .container-nav {
   display: flex;
   align-items: center;
-}
+} */
 
-.logo-link {
+/* .logo-link {
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 24px;
 }
-.logo {
+.logo__dark {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -102,23 +113,46 @@ p {
   letter-spacing: 0.03em;
   color: #000000;
 }
-.logocolor {
+
+.logo__light {
   font-family: Raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--txt-but);
+}
+.logocolor {
+  font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--accent-cl);
-}
+} */
 
-.list {
+/* .list {
   display: flex;
   margin: 0;
   padding: 0;
+} */
+
+/* .link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--txt-col);
 }
 
-.list-nav {
+.link:hover,
+.link:focus {
+  color: var(--accent-cl);
+} */
+
+/* .nav__list {
   display: flex;
   gap: 50px;
 }
@@ -127,7 +161,7 @@ p {
   margin-left: 50px;
 }
 
-.nav-link {
+.nav__link {
   display: block;
 
   color: var(--subtitle-col);
@@ -143,16 +177,16 @@ p {
   transition-timing-function: var(--timing-funcion);
 }
 
-.nav-aktive {
+.nav--aktive {
   position: relative;
 }
 
-.blue-link {
+.blue__link {
   text-decoration: none;
   color: var(--accent-cl);
 }
 
-.nav-aktive::after {
+.nav--aktive::after {
   content: "";
   position: absolute;
   border-bottom: 4px solid var(--accent-cl);
@@ -163,12 +197,23 @@ p {
   border-radius: 4px;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav__link:hover,
+.nav__link:focus {
   color: var(--accent-cl);
+} */
+
+/* Контактні дані */
+
+/* .contacts__list {
+  display: flex;
+  margin-left: auto;
 }
 
-.link-mail {
+.contacts__list .contacts__item + .contacts__item {
+  margin-left: 50px;
+}
+
+.contacts__links {
   display: flex;
   font-size: 14px;
   font-weight: 500;
@@ -183,8 +228,8 @@ p {
   transition-timing-function: var(--timing-funcion);
 }
 
-.link-mail:hover,
-.link-mail:focus {
+.contacts__links:hover,
+.contacts__links:focus {
   color: var(--accent-cl);
 }
 
@@ -192,60 +237,13 @@ p {
   fill: currentColor;
 }
 
-.link-tel {
-  display: flex;
-  font-size: 14px;
-  font-weight: 500;
-  gap: 10px;
-  align-items: center;
-  color: var(--txt-col);
-  padding-top: 24px;
-  padding-bottom: 24px;
-  text-decoration: none;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-funcion);
-}
 .smartphone {
   fill: currentColor;
-}
-
-.link-tel:hover,
-.link-tel:focus {
-  color: var(--accent-cl);
-}
-
-/* Контактні дані */
-.link:hover,
-.link:focus {
-  color: var(--accent-cl);
-}
-
-.contacts-list {
-  display: flex;
-  margin-left: auto;
-}
-
-.contacts-list .list-item + .list-item {
-  margin-left: 50px;
-}
-
-.link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  color: var(--txt-col);
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
+} */
 
 /* Секція HERO */
-.section-hero {
+
+/* .section-hero {
   background: var(--backgr-col);
   max-width: 1500px;
   text-align: center;
@@ -263,7 +261,7 @@ p {
   background-repeat: no-repeat;
 }
 
-.slogan {
+.hero__slogan {
   font-size: 44px;
   font-weight: 900;
   line-height: 1.36;
@@ -274,9 +272,9 @@ p {
   width: 620px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
-.btn {
+/* .hero__btn {
   background: var(--accent-cl);
   border-radius: 4px;
   padding: 10px 32px;
@@ -287,7 +285,7 @@ p {
   cursor: pointer;
 }
 
-.btn-text {
+.hero__btn__text {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -295,10 +293,11 @@ p {
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--txt-but);
-}
+} */
 
 /* Модальне вікно */
-.backdrop {
+
+/* .backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -317,9 +316,9 @@ p {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-}
+} */
 
-.modal {
+/* .modal {
   min-height: 581px;
   min-width: 528px;
   background-color: #ffffff;
@@ -330,7 +329,7 @@ p {
   left: 50%;
 }
 
-.close {
+.modal__close {
   outline: none;
   position: absolute;
   right: 8px;
@@ -349,11 +348,11 @@ p {
   transition: fill 250ms var(--timing-funcion);
 }
 
-.close:hover {
+.modal__close:hover {
   fill: var(--accent-cl);
 }
 
-.registr-form {
+.registr__form {
   position: relative;
   padding: 40px;
   border-radius: 4px;
@@ -363,7 +362,7 @@ label {
   display: flex;
 }
 
-.registr-form-title {
+.registr__form__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -373,20 +372,20 @@ label {
   color: var(--subtitle-col);
 }
 
-.registr-form-group {
+.registr__form__group {
   margin-bottom: 20px;
 }
 
-.registr-field:not(:last-child) {
+.registr__field:not(:last-child) {
   margin-bottom: 10px;
 }
 
-.registr-field {
+.registr__field {
   display: block;
   position: relative;
 }
 
-.registr-form-lable {
+.registr__lable {
   display: block;
   text-align: left;
   font-size: 12px;
@@ -395,7 +394,7 @@ label {
   color: var(--txt-col);
 }
 
-.registr-form-input {
+.registr__input {
   width: 100%;
   height: 40px;
   border-radius: 4px;
@@ -406,16 +405,16 @@ label {
   transition: border-color 250ms var(--timing-funcion);
 }
 
-.registr-form-input:hover,
-.registr-form-input:focus {
+.registr__input:hover,
+.registr__input:focus {
   border-color: var(--accent-cl);
 }
 
-.registr-form-input:focus + .registr-form-icon {
+.registr__input:focus + .registr__icon {
   fill: var(--accent-cl);
 }
 
-.registr-form-icon {
+.registr__icon {
   position: absolute;
   bottom: 11px;
   left: 12px;
@@ -423,7 +422,7 @@ label {
   transition: fill 250ms var(--timing-funcion);
 }
 
-.registr-form-message {
+.registr__message {
   display: block;
   width: 100%;
   height: 120px;
@@ -435,12 +434,12 @@ label {
   transition: border-color 250ms var(--timing-funcion);
 }
 
-.registr-form-message:focus,
-.registr-form-message:hover {
+.registr__message:focus,
+.registr__message:hover {
   border-color: var(--accent-cl);
 }
 
-.registr-form-agreement {
+.registr__agreement {
   display: flex;
   gap: 8px;
   align-items: center;
@@ -449,25 +448,24 @@ label {
   margin-bottom: 30px;
 }
 
-.icon-checked {
+.registr__icon--checked {
   opacity: 0;
   transition: opacity 250ms var(--timing-funcion);
 }
 
-.icon-unchecked {
+.registr__icon--unchecked {
   transition: opacity 250ms var(--timing-funcion);
 }
 
-.registr-form-checkbox:checked + .registr-form-icons .icon-checked {
+.registr__checkbox:checked + .registr__icons .registr__icon--checked {
   opacity: 1;
 }
 
-.registr-form-checkbox:checked + .registr-form-icons .icon-unchecked {
+.registr__checkbox:checked + .registr__icons .registr__icon--unchecked {
   opacity: 0;
-  
 }
 
-.registr-form-desc {
+.registr__desc {
   color: var(--txt-col);
   font-size: 14px;
   line-height: 1.71;
@@ -475,13 +473,34 @@ label {
   user-select: none;
 }
 
-.registr-form-link {
+.registr__link {
   color: var(--accent-cl);
+} */
+
+/* .registr__btn {
+  background: var(--accent-cl);
+  border-radius: 4px;
+  padding: 10px 32px;
+  border: 0px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  cursor: pointer;
 }
+
+.registr__btn__text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--txt-but);
+} */
 
 /* Наші переваги */
 
-.visually-hidden {
+/* .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -492,9 +511,9 @@ label {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
+} */
 
-.plate {
+/* .pref__picture {
   display: flex;
   background-color: var(--backgr-filtr);
   justify-content: center;
@@ -504,7 +523,7 @@ label {
   margin-bottom: 30px;
 }
 
-.list-title {
+.pref__title {
   text-transform: uppercase;
   font-size: 14px;
   line-height: 1.14;
@@ -513,7 +532,7 @@ label {
   margin-bottom: 10px;
 }
 
-.list-text {
+.pref__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -521,13 +540,13 @@ label {
   margin: 0;
 }
 
-.pref-text:not(:last-child) {
+.pref__item:not(:last-child) {
   margin-right: 30px;
-}
+} */
 
 /* чим ми займаємось */
 
-.work {
+/* .work {
   padding-top: 0;
 }
 
@@ -540,16 +559,16 @@ label {
   margin-bottom: 50px;
 }
 
-.work-cards {
+.work__list {
   align-items: center;
   gap: 30px;
 }
 
-.lable-item {
+.work__lable {
   position: relative;
 }
 
-.lable-text {
+.work__lable--text {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -562,24 +581,28 @@ label {
   justify-content: center;
   align-items: center;
   height: 70px;
-}
+} */
 
 /* Наша команда */
-.team {
+
+/* .team {
   background-color: #f5f4fa;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
-.photo-item {
+.team__list {
+  gap: 30px;
+}
+
+.team__item {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
     0px 2px 1px rgb(0 0 0 / 20%);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list {
-  gap: 30px;
-}
-.team-person {
+.team__person {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -589,7 +612,7 @@ label {
   color: var(--subtitle-col);
 }
 
-.team-position {
+.team__position {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
@@ -599,11 +622,11 @@ label {
   margin-bottom: 16px;
 }
 
-.photo-wrapp {
+.team__caption {
   padding: 30px 0;
-}
+} */
 
-.socials {
+/* .socials {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -632,19 +655,21 @@ label {
 
 .social-icon {
   fill: currentColor;
-}
+} */
 
-.clients {
+/* Постійні клієнти */
+
+/* .clients {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
 
-.clients-box {
+.clients__link {
   fill: currentColor;
 }
 
-.frame {
+.clients__items {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -658,14 +683,15 @@ label {
   transition-timing-function: var(--timing-funcion);
 }
 
-.frame:hover,
-.frame:focus {
+.clients__items:hover,
+.clients__items:focus {
   color: var(--accent-cl);
   border-color: var(--accent-cl);
-}
+} */
 
 /* Підвал */
-.footer {
+
+/* .footer {
   background: var(--backgr-col);
   padding-top: 60px;
   padding-bottom: 60px;
@@ -676,44 +702,25 @@ label {
   align-items: baseline;
 }
 
-.address-wrapper {
+.footer__wrapper {
   margin-right: 70px;
   flex-grow: 1;
 }
 
-.footer-logocolor {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-cl);
-}
-
-.footer-logo {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--txt-but);
-}
-
-.address {
+.footer__address {
   margin-top: 20px;
 }
 
-.footer-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.address-list {
+.footer__list {
   list-style: none;
   text-decoration: none;
 }
 
-.address-link {
+.footer__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.footer__address--link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -724,7 +731,7 @@ label {
   color: var(--txt-but);
 }
 
-.contacts-link {
+.footer__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -734,7 +741,7 @@ label {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.call {
+.footer__call {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -746,7 +753,7 @@ label {
   margin-bottom: 20px;
 }
 
-.social-link-footer {
+.footer__social--link {
   display: flex;
   justify-content: center;
   width: 44px;
@@ -760,16 +767,16 @@ label {
   transition-timing-function: var(--timing-funcion);
 }
 
-.social-link-footer:hover,
-.social-link-footer:focus {
+.footer__social--link:hover,
+.footer__social--link:focus {
   color: var(--txt-but);
   background-color: var(--accent-cl);
 }
 
-.footer-subscribe {
+.subscribe {
   margin-left: 93px;
 }
-.subscribe-title {
+.subscribe__title {
   font-weight: 700;
   line-height: 16px;
   color: var(--txt-but);
@@ -777,12 +784,12 @@ label {
   margin-bottom: 20px;
 }
 
-.subscribe-form {
+.subscribe__form {
   display: flex;
   gap: 12px;
 }
 
-.input-subscribe-form {
+.subscribe__form--input {
   width: 358px;
   height: 50px;
   color: rgba(255, 255, 255, 0.6);
@@ -790,9 +797,9 @@ label {
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-}
+} */
 
-.subscribe-btn {
+/* .subscribe__form--btn {
   display: inline-flex;
   position: relative;
   align-items: center;
@@ -802,6 +809,7 @@ label {
   background: var(--accent-cl);
   border-radius: 4px;
   border: 1px solid var(--accent-cl);
+  cursor: pointer;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -810,28 +818,26 @@ label {
   letter-spacing: 0.06em;
   padding: 10px 28px;
   color: var(--txt-but);
-}
+} */
 
-.icon-send {
+/* .subscribe__form--icon-send {
   display: block;
   margin-left: 10px;
-  }
+} */
 
-.port-list {
+/* .port-list {
   display: flex;
   gap: 8px;
   justify-content: center;
 }
 
-.filtr:hover,
-.filtr:focus {
-  color: var(--txt-but);
-  background-color: var(--accent-cl);
-  box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
-    0px 2px 2px rgb(0 0 0 / 12%);
-}
+.filtr-list {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+} */
 
-.filtr {
+/* .filtr-btn {
   font-family: inherit;
   background: var(--backgr-filtr);
   font-size: 16px;
@@ -847,20 +853,27 @@ label {
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-funcion);
-}
+} */
 
-.filtr-list {
-  display: flex;
-  gap: 8px;
-  justify-content: center;
-}
+/* .filtr-btn:hover,
+.filtr-btn:focus {
+  color: var(--txt-but);
+  background-color: var(--accent-cl);
+  box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
+    0px 2px 2px rgb(0 0 0 / 12%);
+} */
 
-.projects-item {
+/* .projects-item {
   text-decoration: none;
   display: block;
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-funcion);
+}
+
+.projects-item:hover,
+.projects-item:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 25%);
 }
 
 .photo-set {
@@ -885,21 +898,16 @@ label {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2);
 }
 
+.projects-item:hover .overlay,
+.projects-item:focus .overlay {
+  transform: translateY(0%);
+}
+
 .overlay-text {
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
   color: var(--txt-but);
-}
-
-.projects-item:hover,
-.projects-item:focus {
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 25%);
-}
-
-.projects-item:hover .overlay,
-.projects-item:focus .overlay {
-  transform: translateY(0%);
 }
 
 .photo-list {
@@ -927,4 +935,4 @@ label {
   border-top: none;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
-}
+} */
